@@ -1,3 +1,9 @@
+2010-06-25 Remi Mommsen <Remigius.Mommsen@cern.ch>
+
+	* tag V05-10-03
+	* Add hostname and instance number to BoR, EoR, and LS entries in
+	  the db log file.
+
 2010-04-28 Remi Mommsen <Remigius.Mommsen@cern.ch>
 
 	* tag V05-10-02
